inst/app/www/stylescss.css
@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&family=Roboto+Condensed&display=swap');
p{
  color:#ffffff;
  font-family:'Lexend Deca', sans-serif;
}
body{
  font-family:'Roboto Condensed', sans-serif;
  background-color: #1b2724;
}
label{
  font-family:'Lexend Deca', sans-serif;
  color: #ffffff;
}
.panel-body{
  background: #1b2724;
  color: #ffffff;
}
.panel-heading{
  color: #1b2724;
  background: #ffffff;
  border-color: #ffffff;
}
.selectize-input{
  font-family:'Roboto Condensed', sans-serif;
  color: #ffffff;
}
.selectize-input.full{
  background-color: #1b2724;
}
.selectize-input.input-active{
  color: #1b2724;
}
.selectize-dropdown{
  font-family:'Roboto Condensed', sans-serif;
  color: #ffffff;
  background-color: #1b2724;
  z-index: 10000;
}
.selectize-option:hover{
  font-family:'Roboto Condensed', sans-serif;
  color: #ffffff;
  background-color: #6eb39c;
}
.selectize-option{
  font-family:'Roboto Condensed', sans-serif;
  color: #ffffff;
  background-color: #1b2724;
}
.selectize-input.focus{
  border-color:#6eb39c;
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px #6eb39c;
  background: #1b2724;
}
.selectize-control.single{
  background: #1b2724;
}
.selectize-control.single .selectize-input:after{
  border-color: #fff transparent transparent transparent;
}
.selectize-control.single .selectize-input.dropdown-active:after{
  border-color: #1b2724 transparent #1b2724 transparent;
}
.inactiveLink {
}
.inactiveLink:active {
  pointer-events: none;
}

